# uroot

./: DESCRIPTION  INDEX  MD5  NAMESPACE  NEWS  README  cleanup  configure  configure.ac  configure.win
R/: hegy-test.R.in  uroot.R
data/: dataFranses.csv  dataIKERBIDE.csv  dataINE.csv  source_capv  source_es  source_franses
inst/: CHANGES  README
inst/doc/: index.html
man/: ADF.test.Rd  CH.test.Rd  CHseas.test.Rd  HEGY.test.Rd  KPSS.test.Rd  bb3D.Rd  bbap.Rd  bbcn.Rd  bbmp.Rd  dataFranses.Rd  dataIKERBIDE.Rd  dataINE.Rd  filtrar.Rd  maybeRegvar-class.Rd  quarterg.Rd  rmg.Rd  stepdate-methods.Rd  urootgui.Rd  ysooys.Rd
src/: COMPILE_CUDA_FALSE.mk  COMPILE_CUDA_TRUE.mk  Makevars.in  uroot.cpp
